logs/afsutil.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/afsutil'...
Compiling './lib/python3.5/site-packages/afsutil/cell.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cell.py, line 486)
Listing './lib/python3.5/site-packages/afsutil/data'...
Compiling './lib/python3.5/site-packages/afsutil/install.py'...
***   File "./lib/python3.5/site-packages/afsutil/install.py", line 214
    os.chmod(path, 0755)  # Make the bosserver happy.
                      ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/afsutil/keytab.py'...
***   File "./lib/python3.5/site-packages/afsutil/keytab.py", line 437
    os.chmod(dst, 0600)
                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/afsutil/rpm.py'...
***   File "./lib/python3.5/site-packages/afsutil/rpm.py", line 196
    print "installed:"
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/afsutil/transarc.py'...
***   File "./lib/python3.5/site-packages/afsutil/transarc.py", line 88
    os.chmod(dst, 0755)
                     ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/afsutil-0.6.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
